discussion/kv_engine/155725/155725_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/mad-hatter' into couchbase/cheshire-cat

* couchbase/mad-hatter:
  MB-46853: Include frameExtras in Request bodyLen validation

Change-Id: I52f9e9d78809376048ac66a0591dc5fc601f652a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-06-14 12:05:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-06-14 12:05:26.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/245782/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 13:01:34.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/53/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/53/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/43/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22: error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
        addFrameInfo(BarrierFrameInfo());
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:243:22: error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
        addFrameInfo(BarrierFrameInfo());
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/43/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/43/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/85/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_misc.cc(242): error C3861: "BarrierFrameInfo": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/85/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/56/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/58/ : FAILURE

Compile error at [2021-06-14T12:53:05.412Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/58/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/56/ : FAILURE

Compile error at [2021-06-14T12:59:48.018Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: ?BarrierFrameInfo? was not declared in this scope; did you mean ?addFrameInfo??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/56/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/56/ : FAILURE

Compile error at [2021-06-14T12:48:15.524Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: ?BarrierFrameInfo? was not declared in this scope; did you mean ?addFrameInfo??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/56/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/56/ : FAILURE

Compile error at [2021-06-14T12:21:01.410Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/56/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8453/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
